add doc package to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ scripts/postrm
 webapp/config/instances
 webmonitor/config/instances
 packages/debian-package/terrama2-doc
+packages/debian-package/terrama2-doc.deb
