script to help configure pm2

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ webapp/config/instances
 webmonitor/config/instances
 packages/debian-package/terrama2-doc
 packages/debian-package/terrama2-doc.deb
+scripts/config_pm2.sh
