--- a/webcomponents/package.json
+++ b/webcomponents/package.json
@@ -1,6 +1,6 @@
 {
   "name": "TerraMA2WebComponents",
-  "version": "4.0.0-rc4",
+  "version": "4.0.0",
   "private": true,
   "scripts": {
     "grunt": "grunt"
