--- a/docker/geoserver/Dockerfile
+++ b/docker/geoserver/Dockerfile
@@ -13,12 +13,12 @@ ENV GEOSERVER_DATA_DIR /opt/geoserver/data_dir
 RUN mkdir -p $GEOSERVER_DATA_DIR
 
 # Configure TomCat. TODO: Export Catalina opts with Docker Arg to customize
-RUN cd /usr/local/tomcat/bin && \
-    echo "#!/bin/bash\n\
-    export CATALINA_OPTS=\"$CATALINA_OPTS -server\"\n\
-    export CATALINA_OPTS=\"$CATALINA_OPTS -Xms32768m\"\n\
-    export CATALINA_OPTS=\"$CATALINA_OPTS -Xmx32768m\"\n" | tee -a setenv.sh && \
-    chmod +x setenv.sh
+#RUN cd /usr/local/tomcat/bin && \
+#    echo "#!/bin/bash\n\
+#    export CATALINA_OPTS=\"$CATALINA_OPTS -server\"\n\
+#    export CATALINA_OPTS=\"$CATALINA_OPTS -Xms32768m\"\n\
+#    export CATALINA_OPTS=\"$CATALINA_OPTS -Xmx32768m\"\n" | tee -a setenv.sh && \
+#    chmod +x setenv.sh
 
 # Install GeoServer
 RUN wget --no-verbose "http://sourceforge.net/projects/geoserver/files/GeoServer/2.11.0/geoserver-2.11.0-war.zip" && \
