--- a/webmonitor/package.json
+++ b/webmonitor/package.json
@@ -1,6 +1,6 @@
 {
   "name": "TerraMA2-webmonitor",
-  "version": "4.0.0",
+  "version": "4.0.1-alpha1",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
