--- a/src/terrama2/Config.hpp.in
+++ b/src/terrama2/Config.hpp.in
@@ -51,26 +51,18 @@ const std::string TERRAMA2_INSTALL_PREFIX_PATH("@CMAKE_INSTALL_PREFIX@");
 
 const std::string TERRAMA2_DIR_VAR_NAME("@TERRAMA2_DIR_VAR_NAME@");
 
-// Defines for platform
-#define TM_PLATFORMCODE_MSWINDOWS 1
-
-#define TM_PLATFORMCODE_LINUX 2
-
-#define TM_PLATFORMCODE_APPLE 3
-
 /*!
-  \def TM_PLATFORM
+  \def TM_DLL
 
-  \brief It keeps the code of the Operational System platform detected by the build system.
+  \brief It links correctly the TerraMa2 libraries in Windows systems.
  */
-#if defined(_WIN32) || defined(_WIN64) || defined(__WIN32__) || defined(__TOS_WIN__) || defined(__WINDOWS__) || defined(_WIN32_WCE)
-  #define TM_PLATFORM TM_PLATFORMCODE_MSWINDOWS
-#elif defined(__LINUX__) || defined(linux) || defined(__linux__) || defined(__linux)
-  #define TM_PLATFORM TM_PLATFORMCODE_LINUX
-#elif (defined(__APPLE__) && defined(__MACH__)) || defined(macintosh) || defined(Macintosh)
-  #define TM_PLATFORM TM_PLATFORMCODE_APPLE
+
+#ifdef WIN32
+  #define TM_DLL_EXPORT __declspec(dllexport)
+  #define TM_DLL_IMPORT __declspec(dllimport)
 #else
-  #error "ERROR: Unknown platform"
+  #define TM_DLL_EXPORT
+  #define TM_DLL_IMPORT
 #endif
 
 #endif // __TERRAMA2_TERRAMA2_CONFIG_HPP__
