--- a/scripts/postinst.in
+++ b/scripts/postinst.in
@@ -12,7 +12,7 @@ printf "Post-installation script...\n"
 
 (
   printf "Checking database version and updating...\n"
-  cd @TERRAMA2_DESTINATION@scripts
+  cd @TERRAMA2_DESTINATION@share/terrama2/scripts
   python update_database.py
 )
 
