--- a/scripts/postinst.in
+++ b/scripts/postinst.in
@@ -14,6 +14,7 @@ printf "Post-installation script...\n"
   printf "Checking database version and updating...\n"
   cd @TERRAMA2_DESTINATION@share/terrama2/scripts
   python update_database.py
+  valid $? "Unable to update database."
 )
 
 (
