Executing update database script

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ webapp/config/webapp.json
 webapp/terrama2.log
 webapp/config/instances
 webapp/public/dist
+webapp/package-lock.json
 webmonitor/node_modules
 webmonitor/npm-debug*
 webmonitor/public/external
@@ -20,6 +21,7 @@ webmonitor/public/docs
 webmonitor/bower_components
 webmonitor/config/monitor.json
 webmonitor/config/instances
+webmonitor/package-lock.json
 .vscode
 scripts/postinst
 scripts/prerm
