fix config pm2 script

--- a/scripts/config_pm2.sh.in
+++ b/scripts/config_pm2.sh.in
@@ -3,6 +3,14 @@
 # Install and configure pm2
 #
 
+function valid()
+{
+  if [ $1 -ne 0 ]; then
+    printf "$2\n"
+    exit 1
+  fi
+}
+
 # Check if pm2 is already installed
 npm list pm2 -g
 if [ $? != 0 ]; then
