--- a/scripts/postinst.in
+++ b/scripts/postinst.in
@@ -13,7 +13,7 @@ function valid()
 printf "Post-installation script...\n"
 
 npm install yarn -g
-valid $? "Unable to install Grunt."
+valid $? "Unable to install Yarn."
 
 (
   printf "Webapp dependencies...\n"
