--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@ packages/debian-package/terrama2-doc*
 packages/debian-package/vmime-0.9.2*
 packages/debian-package/terrama2-vmime-*
 packages/debian-package/v0.9.2.tar.gz
+
+compile_commands.json
