--- a/webapp/package.json
+++ b/webapp/package.json
@@ -86,6 +86,9 @@
     "winston": "^2.3.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0-beta.49",
+    "@babel/preset-env": "^7.0.0-beta.49",
+    "grunt-babel": "^7.0.0",
     "uglify-es": "^3.3.9"
   }
 }
