--- a/webmonitor/package.json
+++ b/webmonitor/package.json
@@ -46,6 +46,7 @@
     "grunt-contrib-watch": "^1.0.0",
     "grunt-jsdoc": "^2.1.0",
     "jsdoc": "^3.4.0",
-    "requirejs": "^2.2.0"
+    "requirejs": "^2.2.0",
+    "uglify-es": "^3.3.9"
   }
 }
