--- a/webcomponents/package.json
+++ b/webcomponents/package.json
@@ -13,6 +13,10 @@
     "grunt-contrib-requirejs": "^1.0.0",
     "grunt-jsdoc": "^2.1.0",
     "jsdoc": "^3.4.0",
-    "requirejs": "^2.2.0"
+    "requirejs": "^2.2.0",
+    "@babel/core": "^7.0.0-beta.49",
+    "@babel/preset-env": "^7.0.0-beta.49",
+    "grunt-babel": "^7.0.0",
+    "uglify-es": "^3.3.9"
   }
 }
