--- a/webapp/package.json
+++ b/webapp/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "ace-builds": "=1.2.8",
+    "adm-zip": "^0.4.11",
     "admin-lte": "=2.3.0",
     "almond": "=0.3.3",
     "angular": "=1.6.5",
