--- a/webapp/package.json
+++ b/webapp/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "ace-builds": "=1.2.8",
-    "adm-zip": "^0.4.11",
+    "adm-zip": "^0.4.13",
     "admin-lte": "=2.3.0",
     "almond": "=0.3.3",
     "angular": "=1.6.5",
@@ -29,7 +29,8 @@
     "angularjs-color-picker": "=2.7.2",
     "angularjs-dropdown-multiselect": "^2.0.0-beta.10",
     "async": "^2.0.0-rc.6",
-    "bcrypt": "^0.8.5",
+    "babel-core": "^6.26.3",
+    "bcrypt": "^3.0.4",
     "bluebird": "^3.3.4",
     "body-parser": "~1.13.2",
     "chart.js": "=2.6.0",
@@ -49,7 +50,7 @@
     "fs": "0.0.1-security",
     "ftp": "^0.3.10",
     "glob": "^7.0.3",
-    "grunt": "^1.0.2",
+    "grunt": "^1.0.3",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-cssmin": "^1.0.2",
@@ -69,9 +70,12 @@
     "nodemailer": "=2.7.2",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "pg": "^4.5.1",
+    "pg": "^6.0.0",
     "pg-format": "^1.0.4",
     "pg-hstore": "^2.3.2",
+    "pg-pool": "^2.0.6",
+    "pg-postgis-types": "^3.0.0",
+    "pg-structure": "^4.2.2",
     "request": "^2.87.0",
     "requirejs": "^2.3.2",
     "rimraf": "^2.6.1",
@@ -84,12 +88,18 @@
     "swig": "1.4.2",
     "ui-select": "=0.19.8",
     "unzip2": "^0.2.5",
-    "winston": "^2.3.0"
+    "winston": "^2.4.3",
+    "xregexp": "^4.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.49",
     "@babel/preset-env": "^7.0.0-beta.49",
     "grunt-babel": "^7.0.0",
     "uglify-es": "^3.3.9"
-  }
+  },
+  "description": "**NOTE:** **NOTE:*** **Check the website for the most recent stable version: http://www.terrama2.dpi.inpe.br/** * **If you have any question, please, send us an e-mail at: terrama2-team@dpi.inpe.br.**",
+  "main": "Gruntfile.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
