--- a/webmonitor/package.json
+++ b/webmonitor/package.json
@@ -12,8 +12,12 @@
     "body-parser": "~1.15.1",
     "bootstrap": "=3.3.7",
     "bootstrap-daterangepicker": "=2.1.25",
+    "c3": "^0.6.14",
     "cookie-parser": "~1.4.3",
+    "crossfilter2": "^1.4.6",
+    "d3": "^5.9.2",
     "datatables": "=1.10.13",
+    "dc": "^3.0.12",
     "debug": "~2.2.0",
     "express": "~4.13.4",
     "express-load": "^1.1.15",
