--- a/webapp/package.json
+++ b/webapp/package.json
@@ -68,7 +68,7 @@
     "morgan": "~1.6.1",
     "ng-file-upload": "=12.2.13",
     "nodemailer": "=2.7.2",
-    "ol": "^5.3.1",
+    "openlayers": "=4.2.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "pg": "^4.5.1",
