--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "terrama2-webapp",
-  "version": "4.0.8-release",
+  "version": "4.0.9-release",
   "private": true,
   "scripts": {
     "start": "grunt && NODE_ENV=PRODUCTION node ./bin/www",
@@ -39,6 +39,7 @@
     "connect-flash": "^0.1.1",
     "connect-multiparty": "^2.0.0",
     "cookie-parser": "~1.3.5",
+    "cron": "^1.7.0",
     "datatables": "=1.10.13",
     "dc": "^3.0.12",
     "debug": "~2.2.0",
@@ -68,6 +69,7 @@
     "moment": "=2.18.1",
     "morgan": "~1.6.1",
     "ng-file-upload": "=12.2.13",
+    "node-schedule": "^1.3.2",
     "nodemailer": "=2.7.2",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
@@ -77,6 +79,7 @@
     "pg-pool": "^2.0.6",
     "pg-postgis-types": "^3.0.0",
     "pg-structure": "^4.2.2",
+    "queue": "^6.0.1",
     "request": "^2.87.0",
     "requirejs": "^2.3.2",
     "rimraf": "^2.6.1",
