--- a/webapp/package.json
+++ b/webapp/package.json
@@ -31,9 +31,9 @@
     "angularjs-color-picker": "=2.7.2",
     "angularjs-dropdown-multiselect": "^2.0.0-beta.10",
     "async": "^2.0.0-rc.6",
+    "babel-core": "^6.26.3",
     "basic-ftp": "^3.4.4",
     "bcrypt": "3.0.4",
-    "babel-core": "^6.26.3",
     "bluebird": "^3.3.4",
     "body-parser": "~1.13.2",
     "chart.js": "=2.6.0",
@@ -42,6 +42,7 @@
     "connect-flash": "^0.1.1",
     "connect-multiparty": "^2.0.0",
     "cookie-parser": "~1.3.5",
+    "cors": "^2.8.5",
     "datatables": "=1.10.13",
     "dc": "^3.0.12",
     "debug": "~2.2.0",
