--- a/webapp/package.json
+++ b/webapp/package.json
@@ -50,6 +50,7 @@
     "connect-flash": "^0.1.1",
     "connect-multiparty": "^2.0.0",
     "cookie-parser": "~1.3.5",
+    "cors": "^2.8.5",
     "datatables": "=1.10.13",
     "dc": "^3.0.12",
     "debug": "~2.2.0",
@@ -98,7 +99,8 @@
     "ui-select": "=0.19.8",
     "umzug": "^2.2.0",
     "unzip2": "^0.2.5",
-    "winston": "^2.3.0"
+    "winston": "^2.4.3",
+    "xregexp": "^4.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.49",
