--- a/webmonitor/package.json
+++ b/webmonitor/package.json
@@ -7,6 +7,8 @@
     "grunt": "grunt"
   },
   "dependencies": {
+    "@amcharts/amcharts4": "^4.4.10",
+    "@amcharts/amcharts4-geodata": "^4.1.6",
     "admin-lte": "=2.3.0",
     "almond": "=0.3.3",
     "body-parser": "~1.15.1",
