--- a/webapp/config/settings.json
+++ b/webapp/config/settings.json
@@ -2,7 +2,7 @@
   "basePath": "/",
   "port": 36000,
   "defaultFilePathList": [
-    "/home/<USER>/terrama2"
+    "/home/marcelo/workspace/terrama2"
   ],
   "defaultExecutablePath": "/home/marcelo/workspace/terrama2/build/bin",
   "defaultExecutableName": "terrama2_service",
