--- a/webapp/package.json
+++ b/webapp/package.json
@@ -23,7 +23,7 @@
   "dependencies": {
     "ace-builds": "=1.2.8",
     "active-ftp": "git+https://github.com/TerraMA2/active-ftp.git",
-    "adm-zip": "^0.4.13",
+    "adm-zip": "^0.4.11",
     "admin-lte": "=2.3.0",
     "almond": "=0.3.3",
     "angular": "=1.6.5",
@@ -40,7 +40,6 @@
     "angularjs-color-picker": "=2.7.2",
     "angularjs-dropdown-multiselect": "^2.0.0-beta.10",
     "async": "^2.0.0-rc.6",
-    "babel-core": "^6.26.3",
     "basic-ftp": "^3.4.4",
     "bcrypt": "3.0.4",
     "bluebird": "^3.3.4",
@@ -63,11 +62,12 @@
     "font-awesome": "=4.6.3",
     "fs": "0.0.1-security",
     "glob": "^7.0.3",
-    "grunt": "^1.0.3",
+    "grunt": "^1.0.2",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-cssmin": "^1.0.2",
     "grunt-contrib-requirejs": "^1.0.0",
+    "grunt-contrib-watch": "^1.0.0",
     "i18n": "0.8.1",
     "i18n-node-angular": "=1.4.0",
     "intl-tel-input": "=9.2.7",
@@ -83,12 +83,9 @@
     "openlayers": "=4.2.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "pg": "^6.0.0",
+    "pg": "^4.5.1",
     "pg-format": "^1.0.4",
     "pg-hstore": "^2.3.2",
-    "pg-pool": "^2.0.6",
-    "pg-postgis-types": "^3.0.0",
-    "pg-structure": "^4.2.2",
     "request": "^2.87.0",
     "requirejs": "^2.3.2",
     "rimraf": "^2.6.1",
@@ -102,15 +99,13 @@
     "ui-select": "=0.19.8",
     "umzug": "^2.2.0",
     "unzip2": "^0.2.5",
-    "winston": "^2.4.3",
-    "xregexp": "^4.2.4"
+    "winston": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.49",
     "@babel/preset-env": "^7.0.0-beta.49",
     "chai": "^4.2.0",
     "grunt-babel": "^7.0.0",
-    "grunt-contrib-watch": "^1.1.0",
     "mocha": "^5.2.0",
     "sinon": "^7.2.3",
     "uglify-es": "^3.3.9"
