--- a/webapp/package.json
+++ b/webapp/package.json
@@ -98,6 +98,7 @@
     "ui-select": "=0.19.8",
     "umzug": "^2.2.0",
     "unzip2": "^0.2.5",
+    "wfs-client": "^0.4.1",
     "winston": "^2.3.0"
   },
   "devDependencies": {
