--- a/webapp/config/settings.json
+++ b/webapp/config/settings.json
@@ -1,10 +1,8 @@
 {
   "basePath": "/",
   "port": 36000,
-  "defaultFilePathList": [
-    "/home/marcelo/workspace/terrama2"
-  ],
-  "defaultExecutablePath": "/home/marcelo/workspace/terrama2/build/bin",
+  "defaultFilePathList": ["/home/<USER>/terrama2"],
+  "defaultExecutablePath": "/opt/terrama2/4.1.0/bin",
   "defaultExecutableName": "terrama2_service",
   "disablePDF": true,
   "debug": true,
