--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "terrama2-webapp",
   "version": "4.1.0-release",
@@ -41,7 +42,7 @@
     "angularjs-dropdown-multiselect": "^2.0.0-beta.10",
     "async": "^2.0.0-rc.6",
     "basic-ftp": "^3.4.4",
-    "bcrypt": "^3.0.4",
+    "bcrypt": "3.0.4",
     "bluebird": "^3.3.4",
     "body-parser": "~1.13.2",
     "chart.js": "=2.6.0",
