--- a/webapp/config/db.json.example
+++ b/webapp/config/db.json.example
@@ -1,9 +1,9 @@
 {
   "production": {
-    "username": "mpmt",
-    "password": "secreto",
-    "database": "mpmt",
-    "host": "terrama2.dpi.inpe.br",
+    "username": "postgres",
+    "password": "postgres",
+    "database": "terrama2",
+    "host": "127.0.0.1",
     "dialect": "postgres",
     "define": {
       "schema": "terrama2"
@@ -13,10 +13,10 @@
   },
 
   "development": {
-    "username": "mpmt",
-    "password": "secreto",
-    "database": "mpmt",
-    "host": "terrama2.dpi.inpe.br",
+    "username": "postgres",
+    "password": "postgres",
+    "database": "terrama2",
+    "host": "127.0.0.1",
     "dialect": "postgres",
     "define": {
       "schema": "terrama2"
