--- a/.gitignore
+++ b/.gitignore
@@ -30,5 +30,11 @@ packages/debian-package/terrama2-doc*
 packages/debian-package/vmime-0.9.2*
 packages/debian-package/terrama2-vmime-*
 packages/debian-package/v0.9.2.tar.gz
-
 compile_commands.json
+.idea/
+build/cmake-build/.idea/
+pgadmin4-1.3-py2.py3-none-any.whl
+config_local.py
+scripts/.idea/
+webmonitor/.idea/
+webapp/.idea/
