Implemented service to fill graphs in dashboard.

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -36,14 +36,14 @@
     "angular-tree-control": "=0.2.28",
     "angular-ui-router": "=0.4.2",
     "angular-wizard": "=0.9.0",
-    "angular-xeditable": "=0.4.0",
+    "angular-xeditable": "^0.10.1",
     "angularjs-color-picker": "=2.7.2",
     "angularjs-dropdown-multiselect": "^2.0.0-beta.10",
     "async": "^2.0.0-rc.6",
     "basic-ftp": "^3.4.4",
     "bcrypt": "3.0.4",
     "bluebird": "^3.3.4",
-    "body-parser": "~1.13.2",
+    "body-parser": "^1.19.0",
     "chart.js": "=2.6.0",
     "child_process": "^1.0.2",
     "clone": "^2.1.1",
@@ -55,7 +55,7 @@
     "dc": "^3.0.12",
     "debug": "~2.2.0",
     "eonasdan-bootstrap-datetimepicker": "=4.17.47",
-    "express": "~4.13.1",
+    "express": "^4.17.1",
     "express-load": "^1.1.15",
     "express-session": "^1.13.0",
     "fastclick": "=1.0.6",
@@ -74,10 +74,10 @@
     "jquery": "=2.2.4",
     "jquery-ui": "=1.12.1",
     "jquery.inputmask": "=3.3.4",
-    "lodash": "4.6.1",
+    "lodash": "^4.17.15",
     "method-override": "^2.3.5",
-    "moment": "=2.18.1",
-    "morgan": "~1.6.1",
+    "moment": "^2.24.0",
+    "morgan": "^1.9.1",
     "ng-file-upload": "=12.2.13",
     "nodemailer": "=2.7.2",
     "openlayers": "=4.2.0",
@@ -91,9 +91,9 @@
     "rimraf": "^2.6.1",
     "sequelize": "^3.23.4",
     "sequelize-cli": "^2.3.1",
-    "serve-favicon": "~2.3.0",
-    "socket.io": "^1.3.7",
-    "socket.io-client": "^1.7.2",
+    "serve-favicon": "^2.5.0",
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0",
     "ssh2": "^0.5.0",
     "swig": "1.4.2",
     "ui-select": "=0.19.8",
