--- a/webapp/package.json
+++ b/webapp/package.json
@@ -76,8 +76,8 @@
     "jquery.inputmask": "=3.3.4",
     "lodash": "4.6.1",
     "method-override": "^2.3.5",
-    "moment": "2.24.0",
-    "morgan": "^1.6.1",
+    "moment": "=2.18.1",
+    "morgan": "~1.6.1",
     "ng-file-upload": "=12.2.13",
     "nodemailer": "=2.7.2",
     "openlayers": "=4.2.0",
