--- a/webapp/package.json
+++ b/webapp/package.json
@@ -31,6 +31,7 @@
     "angular-aria": "=1.6.6",
     "angular-eonasdan-datetimepicker": "=0.3.9",
     "angular-material": "=1.1.4",
+    "angular-sanitize": "^1.6.5",
     "angular-schema-form": "=0.8.13",
     "angular-sortable-view": "=0.0.15",
     "angular-tree-control": "=0.2.28",
@@ -38,7 +39,7 @@
     "angular-wizard": "=0.9.0",
     "angular-xeditable": "=0.4.0",
     "angularjs-color-picker": "=2.7.2",
-    "angularjs-dropdown-multiselect": "^2.0.0-beta.10",
+    "angularjs-dropdown-multiselect": "2.0.0-beta.10",
     "async": "^2.0.0-rc.6",
     "basic-ftp": "^3.4.4",
     "bcrypt": "3.0.4",
