--- a/webapp/package.json
+++ b/webapp/package.json
@@ -39,7 +39,7 @@
     "angular-wizard": "=0.9.0",
     "angular-xeditable": "=0.4.0",
     "angularjs-color-picker": "=2.7.2",
-    "angularjs-dropdown-multiselect": "2.0.0-beta.10",
+    "angularjs-dropdown-multiselect": "^2.0.0-beta.10",
     "async": "^2.0.0-rc.6",
     "basic-ftp": "^3.4.4",
     "bcrypt": "3.0.4",
