--- a/webapp/config/db.json.example
+++ b/webapp/config/db.json.example
@@ -3,7 +3,8 @@
     "username": "postgres",
     "password": "postgres",
     "database": "terrama2",
-    "host": "127.0.0.1"
+    "host": "127.0.0.1",
+    "port": 5432,
     "dialect": "postgres",
     "define": {
       "schema": "terrama2"
@@ -17,6 +18,7 @@
     "password": "postgres",
     "database": "terrama2",
     "host": "127.0.0.1",
+    "port": 5432,
     "dialect": "postgres",
     "define": {
       "schema": "terrama2"
