--- a/webapp/package.json
+++ b/webapp/package.json
@@ -31,7 +31,7 @@
     "angular-aria": "=1.6.6",
     "angular-eonasdan-datetimepicker": "=0.3.9",
     "angular-material": "=1.1.4",
-    "angular-sanitize": "^1.6.5",
+    "angular-sanitize": "=1.6.5",
     "angular-schema-form": "=0.8.13",
     "angular-sortable-view": "=0.0.15",
     "angular-tree-control": "=0.2.28",
