--- a/webapp/config/settings.json
+++ b/webapp/config/settings.json
@@ -4,7 +4,7 @@
   "defaultFilePathList": [
     "/home/<USER>/workspace/terrama2"
   ],
-  "defaultExecutablePath": "/home/<USER>/workspace/terrama2/build/bin",
+  "defaultExecutablePath": "/opt/terrama2/4.1.0/bin",
   "defaultExecutableName": "terrama2_service",
   "disablePDF": true,
   "debug": true,
@@ -16,7 +16,7 @@
       "textEs": "TerraMA² Homepage",
       "textFr": "TerraMA² Homepage",
       "textPt": "TerraMA² Homepage",
-      "url": "localhost/",
+      "url": "http://www.terrama2.dpi.inpe.br/",
       "openInNewTab": true
     }
   ],
