Removed grunt from npm start command

--- a/webmonitor/package.json
+++ b/webmonitor/package.json
@@ -3,8 +3,8 @@
   "version": "4.1.0-release",
   "private": true,
   "scripts": {
-    "start": "grunt && NODE_ENV=PRODUCTION node ./bin/www",
-    "dev": "grunt && NODE_ENV=DEVELOPMENT node --inspect=0.0.0.0:9230 ./bin/www",
+    "start": "NODE_ENV=PRODUCTION node ./bin/www",
+    "dev": "grunt && NODE_ENV=DEVELOPMENT node --inspect=0.0.0.0:5859 ./bin/www",
     "grunt": "grunt"
   },
   "dependencies": {
