--- a/webapp/package.json
+++ b/webapp/package.json
@@ -3,7 +3,7 @@
   "version": "4.1.0-release",
   "private": true,
   "scripts": {
-    "start": "grunt && NODE_ENV=PRODUCTION node ./bin/www",
+    "start": "NODE_ENV=PRODUCTION node ./bin/www",
     "dev": "grunt && NODE_ENV=DEVELOPMENT node --inspect=0.0.0.0:5858 ./bin/www",
     "grunt": "grunt",
     "test": "mocha -c --reporter=spec --timeout 99999 --recursive 'tests/**/*.spec.js'",
