--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ packages/debian-package/terrama2-vmime-*
 packages/debian-package/v0.9.2.tar.gz
 compile_commands.json
 .idea/
+build/cmake-build
 build/cmake-build/.idea/
 pgadmin4-1.3-py2.py3-none-any.whl
 config_local.py
